tests/fixtures/invalid/bool_pow_list.py
# Cannot power Bool and List[int]
x: bool = True ** [1, 2, 3]
